<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailMoviesActivity">

    <WebView
        android:id="@+id/trailerVideo"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trailerVideo"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layoutTopData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/posterImg"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutDataMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/posterImg"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/genre"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/genre"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/genre"
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/durasi"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/duration"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/durasi"
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/adult"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/isAdult"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/genre"
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kepopuleran"
                                android:textSize="12sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/popularity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/genre"
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </TableRow>
                    </TableLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleOverView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutTopData"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleOverView"
                android:layout_marginTop="5dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionMovie"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviewMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleReview"
                tools:listitem="@layout/item_review_movie" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>